tests/language_modules/10_expressions/valid/array_index_expression.vf
module ArrayIndexExpression

procedure main()
is
    let values: Array<Integer, 3> = [1, 2, 3]
    check values[2] = 3
end main

end ArrayIndexExpression