tests/language_modules/10_expressions/invalid_semantics/unary_negative_operand_mismatch.vf
module UnaryNegativeOperandMismatch

procedure main()
is
    let amount: Integer = -true
    check true
end main

end UnaryNegativeOperandMismatch